--- a/templates/chat.html
+++ b/templates/chat.html
@@ -15,12 +15,12 @@
                     <div class="card-header msg_head">
                         <div class="d-flex bd-highlight">
                             <div class="img_cont">
-                                <img src="mhafizazh.jpg" class="rounded-circle user_img">
+                                <img src="../static/mhafizazh.jpg" class="rounded-circle user_img">
                                 <span class="online_icon"></span>
                             </div>
                             <div class="user_info">
                                 <span>mhafizazh-GPT</span>
-                                <p>I'm helping recruiters ask about mhafizazh!</p>
+                                <p>I'm helping recruiters ask about Hafiz!</p>
                             </div>
                         </div>
                     </div>
