--- a/templates/chat.html
+++ b/templates/chat.html
@@ -71,7 +71,7 @@
                     // Hide typing indicator
                     $("#typingIndicator").hide();
 
-                    var botHtml = '<div class="d-flex justify-content-start mb-4"><div class="img_cont_msg"><img src="https://media.licdn.com/dms/image/D4D35AQHsBKxGDPUucA/profile-framedphoto-shrink_200_200/0/1700580639893?e=1703455200&v=beta&t=6lhrDljwOO4aggXJBAaRmMVTuT7NHTyVlzKkwuS6WgE" class="rounded-circle user_img_msg"></div><div class="msg_cotainer">' + data + '<span class="msg_time">' + str_time + '</span></div></div>';
+                    var botHtml = '<div class="d-flex justify-content-start mb-4"><div class="img_cont_msg"><img src="../static/mhafizazh.jpg" class="rounded-circle user_img_msg"></div><div class="msg_cotainer">' + data + '<span class="msg_time">' + str_time + '</span></div></div>';
                     $("#messageFormeight").append($.parseHTML(botHtml));
                 });
                 event.preventDefault();
