--- a/templates/chat.html
+++ b/templates/chat.html
@@ -53,7 +53,7 @@
                 const str_time = hour+":"+minute;
                 var rawText = $("#text").val();
 
-                var userHtml = '<div class="d-flex justify-content-end mb-4"><div class="msg_cotainer_send">' + rawText + '<span class="msg_time_send">'+ str_time + '</span></div><div class="img_cont_msg"><img src="mhafizazh.jpg" class="rounded-circle user_img_msg"></div></div>';
+                var userHtml = '<div class="d-flex justify-content-end mb-4"><div class="msg_cotainer_send">' + rawText + '<span class="msg_time_send">'+ str_time + '</span></div><div class="img_cont_msg"></div></div>';
 
                 $("#text").val("");
                 $("#messageFormeight").append(userHtml);
